--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
+{file_path} filter=lfs diff=lfs merge=lfs -text
 Results/GRAVITY/dt/GRAV/Canada_Gravity_2018.dbf filter=lfs diff=lfs merge=lfs -text
