Add large file to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ backups
 REPORTS
 .venv
 Results/Modeling/dt/GRAV/Canada_Gravity_2018.dbf
+Results/GRAVITY/comparison/dt/GRAV/Canada_Gravity_2018.dbf
